--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(phases: List[models.matches.Phase])
+@(phases: List[models.matches.Phase], origin : String)
 
 	
 @getGamePhase(p:Integer, i: Integer, ga: Integer, gb: Integer) = {
@@ -81,18 +81,12 @@
 
 	
 	
-		<div class="row" style="padding: 0; margin:15px 0;">
-			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8" >
-				<div class="row">
+		<div class="row" style="margin:15px 0;">
+			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8" >
+				<div class="btn-group">
 					@for(phase <- phases) {			
 						@if(phase.getIdPhase() != 5) {
-							<div class="col-xs-12 col-sm-12 col-md-8 col-lg-2" style=" padding:0; padding-right:2px; text-align: left; width:auto;" >
-								@if(phase.getIdPhase() == 1) {
-									<span data-phase="@phase.getIdPhase()" class="menu phase on @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</span>
-								} else {
-									<span data-phase="@phase.getIdPhase()" class="menu phase @("hidden".when(phase.getIdPhase() != 1))"  >@phase.getName()</span>	
-								}
-							</div>			
+							<button data-phase="@phase.getIdPhase()"  type="button" class="btn btn-default menu phase @("on".when(phase.getIdPhase() == 1)) @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</button>			
 						}			
 					}
 					
@@ -102,7 +96,19 @@
 				</div>	
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" style="text-align: right;" >
-				<span id="save" class="menu phase" >GUARDAR</span>
+				<div class="btn-group">
+					  <button id="save" type="button" class="btn btn-default menu phase" >GUARDAR</button>
+				
+					  
+					  
+					  @if(origin == "null") {
+					  	<button id="exit" type="button" class="btn btn-default menu phase" onclick="fReplace();">SALIR</button>
+					  	
+					  } else {
+					  	<button id="exit" type="button" class="btn btn-default menu phase" onclick="FB.logout();">SALIR</button>
+					  }
+					 
+				</div>						
 			</div>
 			
 		</div>
@@ -123,14 +129,14 @@
 					<div class="col-md-12">
 				
 
-						<div class="row">
+						<div class="row title">
 					
-							<div class="@{if(phase.getIdPhase() == 1 ) "col-md-6" else "col-md-12"}" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: left;">								
+							<div class="@{if(phase.getIdPhase() == 1 ) "col-md-6" else "col-md-12"}">								
 								<span>Predicción @phase.getName()</span>					
 							</div>
 							
 							@if(phase.getIdPhase() == 1) {
-								<div class="col-md-6" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: right;">
+								<div class="col-md-6" style="text-align: right;">
 									<span>Grupos </span>
 									@if(phase.getIdPhase() == 1) {
 										@for(group <- phase.getMatchGroup()) {
@@ -298,9 +304,15 @@
 
 		@for(phase <- phases) {
 			@if(phase.getIdPhase == 1) {
-
+					<div class="row title" >
+						<div class="col-md-12" >
+							<span>Predicción por Grupos</span>
+						</div>
+					</div>
 				<div class="row" >
-					<div class="col-md-12" style="background-color:#173069; color:#FFFFFF; font-weight: bold;">Predicción por Grupos</div>
+				
+					
+					
 					@for((group,index) <- phase.getMatchGroup().zipWithIndex) {
 						
 						@if((index%4) == 0) {
