--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -17,10 +17,12 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>        
+       	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
+
         
-        <script src="@controllers.routes.Application.jsRoutes()" type="text/javascript"></script>
-        <script src="@routes.Application.javascriptRoutes" type="text/javascript"></script>
+        
+       
         
         <style>
         
@@ -28,6 +30,13 @@
         	body{font-family: Arial, Helvetica, sans-serif;}
         	
 
+* {
+  -webkit-border-radius: 0 !important;
+     -moz-border-radius: 0 !important;
+          border-radius: 0 !important;
+         
+}
+.help-block {display:none !important; }
 			img.flag {width:67px; height:45px; vertical-align: middle;}
 			img.arrow{width:11px; height:8px;  cursor: pointer; }
 			
@@ -73,9 +82,13 @@
 			.menu.phase[data-phase="4"].on{background-color:#455D86; color:#ffffff;}
 			.menu.phase[data-phase="6"].on{background-color:#314972; color:#ffffff;}
 			
+			#exit {background-color:#d9534f; color:#FFFFFF;}
+			#exit:hover {padding:10px; background-color:#BEC5DF;  color:#FFFFFF;}
 			
 			#save {background-color:#f1e916; color:#999999;}
 			#save:hover{padding:10px; background-color:#BEC5DF; color:#ffffff;}
+			
+			
 			
 			
 			.content-flag-score {width: 75px; min-height: 60px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
@@ -101,6 +114,11 @@
 			
 			.date {font-size:x-small;}
 			.name {font-weight:bold;}
+			
+			.btn-group > button.menu.phase {margin-left:2px;} 
+			.btn-group > button.menu.phase:first-child {margin-left:0;}
+			
+			.title {padding: 5px; background-color:#173069; color:#FFFFFF; font-weight: bold; }
         </style>
         
 		<script>
@@ -1037,93 +1055,63 @@
 
 	  		});
 	  		
+	  		var fReplace = function() {
+	  			window.location.replace("@routes.Application.exit");
+	  		};
+	  		
+	  		// In your JavaScript code:
+			var login_event = function(response) {
+					
+			  if (response.status == 'connected') {
+			  	FB.api('/me', function(response) {
+			      	document.getElementById("socialid").value = response.id ;			      	
+			      	document.forms[0].submit();
+			    });
+			  } else if (response.status === 'not_authorized') {
+			  	fReplace();
+			  } else {
+			  	fReplace();
+			  }
+			};
+			
+			var logout_event = function(response) {
+			  console.log("logout_event");
+			  console.log(response.status);
+			  console.log(response);
+			};
+	  		
+	  		
+	  		function init()
+			{
+				FB.Event.subscribe('auth.login', login_event);
+				FB.Event.subscribe('auth.logout', logout_event);
+			}
   		</script>
         
     </head>
-    <body>
-
-		<div id="fb-root"></div>
+    <body onload="init();">
+    	
+    	<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/es_ES/all.js#xfbml=1&appId=647787605309095";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+		
 		
 		<script>
-		
-			window.fbAsyncInit = function() {
-		  	
-				FB.init({
-					appId      : '647787605309095',
-					status     : true, // check login status
-					cookie     : true, // enable cookies to allow the server to access the session
-					xfbml      : true  // parse XFBML
-				});
-		
-				// Here we subscribe to the auth.authResponseChange JavaScript event. This event is fired
-				// for any authentication related change, such as login, logout or session refresh. This means that
-				// whenever someone who was previously logged out tries to log in again, the correct case below 
-				// will be handled. 
-			  	FB.Event.subscribe('auth.authResponseChange', function(response) {
-			    	// Here we specify what we do with the response anytime this event occurs. 
-				    if (response.status === 'connected') {
-				      // The response object is returned with a status field that lets the app know the current
-				      // login status of the person. In this case, we're handling the situation where they 
-				      // have logged in to the app.
-				      testAPI();
-				    } else if (response.status === 'not_authorized') {
-				      // In this case, the person is logged into Facebook, but not into the app, so we call
-				      // FB.login() to prompt them to do so. 
-				      // In real-life usage, you wouldn't want to immediately prompt someone to login 
-				      // like this, for two reasons:
-				      // (1) JavaScript created popup windows are blocked by most browsers unless they 
-				      // result from direct interaction from people using the app (such as a mouse click)
-				      // (2) it is a bad experience to be continually prompted to login upon page load.
-				      FB.login();
-				    } else {
-				      // In this case, the person is not logged into Facebook, so we call the login() 
-				      // function to prompt them to do so. Note that at this stage there is no indication
-				      // of whether they are logged into the app. If they aren't then they'll see the Login
-				      // dialog right after they log in to Facebook. 
-				      // The same caveats as above apply to the FB.login() call here.
-				      FB.login();
-				    }
-			  	});
-			};
-		
-			// Load the SDK asynchronously
-			(function(d){
-				var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-			   	if (d.getElementById(id)) {return;}
-			   	js = d.createElement('script'); js.id = id; js.async = true;
-			   	js.src = "//connect.facebook.net/en_US/all.js";
-			   	ref.parentNode.insertBefore(js, ref);
-			  }(document));
-		
-			  // Here we run a very simple test of the Graph API after login is successful. 
-			  // This testAPI() function is only called in those cases. 
-			  function testAPI() {
-		  	
-					console.log('Welcome!  Fetching your information.... ');
-		    
-				    FB.api('/me?scope=email', function(response) {
-				    	console.log('Good to see you id, ' + response.id + '.');
-				      	console.log('Good to see you name, ' + response.name + '.');
-				      	console.log('Good to see you first_name, ' + response.first_name + '.');
-				      	console.log('Good to see you last_name, ' + response.last_name + '.');
-				      	console.log('Good to see you email, ' + response.email + '.');
-				    });
-		    
-			    	FB.api('/me/friendlists',
-					    function (response) {
-						      if (response && !response.error) {
-						        /* handle the result */
-									console.log('handle the result '+response.data.length);
-						      } 
-					    }
-					);
-
-		  		}
+			 window.fbAsyncInit = function() {
+				  FB.init({
+				    appId      : '647787605309095',
+				    status     : true, // check login status
+				    cookie     : true, // enable cookies to allow the server to access the session
+				    xfbml      : true  // parse XFBML
+				  });
+			  }; 
 		</script>
-
-
 		
-			
     	<script>
 			var arrPhase = [];
 			var arrGroup = [];
@@ -1134,25 +1122,7 @@
 		</script>
 	
 		<div class="container">
-			
-			
-			
-			
-			<div class="row" >
-				<div class="col-md-12" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: left;"  >
-					<span>Regístrate gratis</span>
-				</div>
-			</div>
-			
-			<div class="row" style="padding: 0; margin:15px 0;">
-				<div class="col-md-12" style="padding: 0;" >
-					<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>	
-				</div>
-			</div>
-			
-			
-			@content
-							
+			@content							
 		</div>
 		
 		
