--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -19,8 +19,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>        
        	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
-
-        
+		
         
        
         
@@ -87,17 +86,12 @@
 			
 			#save {background-color:#f1e916; color:#999999;}
 			#save:hover{padding:10px; background-color:#BEC5DF; color:#ffffff;}
-			
-			
-			
-			
-			.content-flag-score {width: 75px; min-height: 60px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
+
+			.content-flag-score {width: 75px; height: 68px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
 			.content-flag-score:last-child{margin:5px 0 5px 0;}			
 			.content-flag-score.on {background-color:#bababb;  -moz-box-shadow: 3px 3px rgba(226,226,229,0.7); -webkit-box-shadow: 3px 3px rgba(226,226,229,0.7); box-shadow: 3px 3px rgba(226,226,229,0.7); text-align: center;}			
 			.content-flag-score.on img.flag {width:75%;}
 			
-			
-		
 			.goal {text-align:center;}
 			
 			ul,li {padding:0; margin:0; border:0; list-style:none outside none; text-align:center;}
@@ -708,35 +702,47 @@
 				
 				$(document).on('click','#save', function() {
 					
-					var jsonMatches={client:1,matches:[]};
+					$('.alert').removeAttr('style');
+					$('.alert').addClass('hidden');
+					
+					
+					var jsonSave={idClient:"34",clientPrediction:{matches:[]}};
+			
 					$.each(arrPhase, function(index,phase) {
 						$.each(phase.group, function(index,group) {
 							$.each(group.game, function( index, game ) {								
-								jsonMatches.matches.push({"id_match":game.id,"score_team_a":game.team[0].goals.f,"score_team_b":game.team[1].goals.f});
+								jsonSave.clientPrediction.matches.push({"id_match":game.id,"score_team_a":game.team[0].goals.f,"score_team_b":game.team[1].goals.f});
 							});
 						});
 					});
+
 					
 					$.ajax({
-	            		url: 'http://localhost:8080/TVMaxPolla/tvmaxsaveprediction.php?callback=23',
-	            		type: 'post',	            		
-	            		dataType: 'jsonp',
-	            		contentType: "application/json; charset=utf-8",
-	            		success: function (data) {
-	            			var obj = jQuery.parseJSON(data);
-	                		/*console.log(obj.description);
-	                		console.log(JSON.stringify(jsonMatches));*/
-	                		alert('Predicción guardada');
-	            		},
-	            		data: jsonMatches
-	        		});
-				
-				
-					
-				});
-				
+	            		url: "@controllers.matchesapi.routes.PredictionController.storeClientPrediction",
+	            		type: 'POST',	            		
+	            		dataType: 'json',
+	            		data: JSON.stringify(jsonSave),
+	            		contentType: "application/json; charset=utf-8"	
+	        		}).done(function(msg) {
+	        			
+	        			if (msg.error==0) {
+	        				$('.alert-success').removeClass('hidden');
+	        				setTimeout(function(){$('.alert-success').fadeOut();}, 2000); 
+	        			} else {
+	        				$('.alert-danger').removeClass('hidden');
+	        				setTimeout(function(){$('.alert-danger').fadeOut();}, 2000);
+	        			}
+	        			
+	        				        			
+	        			
+					}).fail(function( jqXHR, textStatus ) {  						
+  						$('.alert-danger').removeClass('hidden');
+  						
+					});
 
-			
+
+				});
+
 
 				$(document).on('click','.up, .down', function() {
 					
@@ -1105,7 +1111,7 @@
 			 window.fbAsyncInit = function() {
 				  FB.init({
 				    appId      : '647787605309095',
-				    status     : true, // check login status
+				    status     : false, // check login status
 				    cookie     : true, // enable cookies to allow the server to access the session
 				    xfbml      : true  // parse XFBML
 				  });
@@ -1122,6 +1128,22 @@
 		</script>
 	
 		<div class="container">
+			
+			
+		
+			<div class="row" style="margin: 5px 0 ;">
+				<div class="col-md-12" >
+					<div class="alert alert-success hidden">					
+						<strong>Well done!</strong> You successfully read this important alert message.
+					</div>
+					<div class="alert alert-danger hidden">					
+						<strong>Well done!</strong> You successfully read this important alert message.
+					</div>
+				</div>
+			</div>
+			
+			
+		
 			@content							
 		</div>
 		
