NoticiasTVN: actualizacion de cordova y mejoras para poder abrir una pagina web desde la aplicacion

--- a/NoticiasTVN/NoticiasTVN/platforms/android/res/xml/config.xml
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/res/xml/config.xml
@@ -110,4 +110,7 @@
     <feature name="Geolocation">
         <param name="android-package" value="org.apache.cordova.geolocation.GeoBroker" />
     </feature>
+    <feature name="InAppBrowser">
+        <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
+    </feature>
 </widget>
