--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -95,30 +95,39 @@
 			</div>
 		</div-->
 
-		<div class="row" style="margin:5px 0;">
-			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8" >
-				
+		<div class="row menu large" style="margin:5px 0;">
+		
+			<div data-type="large" class="col-xs-12 col-sm-12 col-md-8 col-lg-8" >				
 				<div class="btn-group">
 					@for(phase <- phases) {			
 						@if(phase.getIdPhase() != 5) {
-							<button data-phase="@phase.getIdPhase()"  type="button" class="btn btn-default menu phase @("on".when(phase.getIdPhase() == 1)) @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</button>			
+							<button data-phase="@phase.getIdPhase()"  type="button" class="btn btn-default menu phase large @("on".when(phase.getIdPhase() == 1)) @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</button>			
 						}			
 					}
-				</div>
-					
+				</div>					
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" style="text-align: right;" >
 				<div class="btn-group">
-					  <button id="save" ata-loading-text="Loading..."  type="button" class="btn btn-default menu phase" >GUARDAR</button>
-					  <button id="exit" type="button" class="btn btn-default menu phase" onclick="fReplace();">SALIR</button>
+					  <button  data-loading-text="Loading..."  type="button" class="btn btn-default menu phase save" >GUARDAR</button>
+					  <button type="button" class="btn btn-default menu phase exit" onclick="fReplace();">SALIR</button>
 				</div>						
 			</div>
-			
+		</div>
+
+
+
+		<div class="row menu session" style="background-color: #D3D3D3; padding: 10px 5px;">
+			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
+				<button  data-loading-text="Loading..." type="button" class="btn btn-default menu phase save" >GUARDAR</button>
+			</div>
+			<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" style="text-align: right;" >
+			 	<button type="button" class="btn btn-default menu phase exit" onclick="fReplace();">SALIR</button>
+			</div>
 		</div>
 				
- 		<!--div class="row title small" style="background-color: #BAC6DD;">
+ 		<div class="row menu small" style="background-color: #BAC6DD; padding: 10px 5px;">
 			
-		</div-->
+		</div>
  	
  	
 		<!-- <phase> -->
