--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -101,7 +101,7 @@
 				<div class="btn-group">
 					@for(phase <- phases) {			
 						@if(phase.getIdPhase() != 5) {
-							<button data-phase="@phase.getIdPhase()"  type="button" class="btn btn-default menu phase large @("on".when(phase.getIdPhase() == 1)) @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</button>			
+							<button data-phase="@phase.getIdPhase()"  type="button"  class="btn btn-default menu phase large @("on".when(phase.getIdPhase() == 1)) @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</button>			
 						}			
 					}
 				</div>					
@@ -226,7 +226,7 @@
 											<div class="row">
 										
 												<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" style="text-align: left; padding: 5px; " data-team="@game.getTeamA().getIdTeam()"   >
-													<img class="flag" src="@routes.Assets.at("images/flags/" + game.getTeamA().getFlagFile())" alt="@game.getTeamA().getName()" />
+													<img class="flag" onerror="this.style.display='none'" src="@routes.Assets.at("images/flags/" + game.getTeamA().getFlagFile())" alt="@game.getTeamA().getName()" />
 													<span class="name">@game.getTeamA().getName()</span>
 												</div>
 														
@@ -235,17 +235,17 @@
 													<div class="row" style="text-align: center;" >
 													
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" data-team="@game.getTeamA().getIdTeam()" >															
-															<div class="row" >
+															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
+																	<img class="arrow" src="@routes.Assets.at("images/up.png")" />
 																</div>
 															</div>
 															<div class="row" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal" data-goal="@game.getResults().getScoreTeamA()" >@game.getResults().getScoreTeamA()</div>
 															</div>
-															<div class="row" >
+															<div class="row  down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<img class="arrow down" src="@routes.Assets.at("images/down.png")" />										
+																	<img class="arrow" src="@routes.Assets.at("images/down.png")" />										
 																</div>
 															</div>
 														</div>
@@ -253,7 +253,7 @@
 															<div style="background-color:#999999; width:1px; height: 50px; margin: 0 auto; "></div>
 														</div>
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" data-team="@game.getTeamB().getIdTeam()">														
-															<div class="row" >
+															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
 																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
 																</div>
@@ -261,9 +261,9 @@
 															<div class="row" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 goal" data-goal="@game.getResults().getScoreTeamB()"  >@game.getResults().getScoreTeamB()</div>
 															</div>
-															<div class="row" >
+															<div class="row down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<img class="arrow down" src="@routes.Assets.at("images/down.png")" />										
+																	<img class="arrow " src="@routes.Assets.at("images/down.png")" />										
 																</div>
 															</div>														
 														</div>
@@ -275,7 +275,7 @@
 															
 												<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" style="text-align: right; padding: 5px; " data-team="@game.getTeamB().getIdTeam()" >
 													<span class="name">@game.getTeamB().getName()</span>																									
-													<img  class="flag" src="@routes.Assets.at("images/flags/" + game.getTeamB().getFlagFile())" alt="@game.getTeamB().getName()"   style="text-align: left;" />																																
+													<img  class="flag" onerror="this.style.display='none'" src="@routes.Assets.at("images/flags/" + game.getTeamB().getFlagFile())" alt="@game.getTeamB().getName()"   style="text-align: left;" />																																
 												</div>
 											
 											</div>
@@ -320,15 +320,15 @@
 
 		@for(phase <- phases) {
 			@if(phase.getIdPhase == 1) {
-					<div class="row title" >
-						<div class="col-md-12" >
-							<span>Predicción por Grupos</span>
-						</div>
+			
+			
+				<div class="row title prediction" >
+					<div class="col-md-12" >
+						<span>Predicción por Grupos</span>
 					</div>
-				<div class="row" >
+				</div>
 				
-					
-					
+				<div class="row prediction" >					
 					@for((group,index) <- phase.getMatchGroup().zipWithIndex) {
 						
 						@if((index%4) == 0) {
@@ -336,7 +336,7 @@
 								<div class="row" style=" padding: 5px;">
 						}
 
-						<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3"  >
+						<div class="col-xs-4 col-sm-4 col-md-3 col-lg-3"  >
 							<div style="padding: 0px; margin-left:10px;">							
 								<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score">@group.getName()1</div>	
 								<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score">@group.getName()2</div>	
@@ -349,8 +349,7 @@
 							</div>
 						}
 						
-					}
-					
+					}					
 				</div>		
 				
 			}	
