--- a/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
+++ b/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
@@ -7,6 +7,7 @@
 	.game {height:auto; padding:5px}	
 	.row.menu.small, .row.menu.session {display: block}
 	.row.menu.large {display: none}
+	.prediction {display: none}
 }
 
 /* Small devices (tablets, 768px and up) */
@@ -18,6 +19,7 @@
 	.game {height:auto; padding:5px}
 	.row.menu.small, .row.menu.session {display: block}
 	.row.menu.large {display: none}
+	.prediction {display: none}
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -29,6 +31,7 @@
 	.game {height:70px; padding:5px}
 	.row.menu.small, .row.menu.session {display: none}
 	.row.menu.large {display: block}
+	.prediction {display: block}
 }
 
 /* Large devices (large desktops, 1200px and up) */
@@ -40,6 +43,6 @@
 	.game {height:70px; padding:5px}
 	.row.menu.small, .row.menu.session {display: none}
 	.row.menu.large {display: block}
-	
+	.prediction {display: block}	
 }
 
