--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -255,7 +255,7 @@
 														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" data-team="@game.getTeamB().getIdTeam()">														
 															<div class="row up" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
-																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
+																	<img class="arrow" src="@routes.Assets.at("images/up.png")" />
 																</div>
 															</div>
 															<div class="row" >
@@ -263,7 +263,7 @@
 															</div>
 															<div class="row down" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-																	<img class="arrow " src="@routes.Assets.at("images/down.png")" />										
+																	<img class="arrow" src="@routes.Assets.at("images/down.png")" />										
 																</div>
 															</div>														
 														</div>
