Se agrega seccion de usuario

--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -79,21 +79,12 @@
 
 @main("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
-		<!--div class="row" style="background-color:#e2e2e3; height: 100px;" >
-			<div class="col-md-8" >
-				<h3>@session.get("nick")</h3>
+		<div class="row" style="background-color:#eaeaea; padding: 10px; " >
+			<div class="col-md-8" style="background: url(@routes.Assets.at("images/usuario.png")) no-repeat 16px top;  background-size:88px 88px; height: 88px;  padding-top:9px;" >
+				<img src="@routes.Assets.at("images/ud.png")" style="width:30px; height:68px; vertical-align: middle;" />
+				<h3 id="nick" style="display: inline; margin-left: 60px; font-weight: bold; font-size: 1.4em;">@session.get("nick")</h3>							
 			</div>
-			<div class="col-md-4" style="float: right;">
-				<div class="row" style=" background-color: red; padding: 15px; margin: 30px 5px;" >
-					<div class="col-md-6" >
-						Puesto
-					</div>
-					<div class="col-md-6" >
-						Puntos
-					</div>
-				</div>
-			</div>
-		</div-->
+		</div>
 
 		<div class="row menu large" style="margin:5px 0;">
 		
