--- a/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signUpForm.scala.html
@@ -86,7 +86,9 @@
 	                'class -> "form-control input",
 		            'placeholder -> "Repetir contraseña*"
 	            )
-		            	
+		        
+		        <input id="socialname" type="hidden" name="socialname" value='' >
+		        <input id="socialemail" type="hidden" name="socialemail" value='' >	    	
 				<input id="socialid" type="hidden" name="socialid" value='' >		
 				<br/>
 		  		<button type="submit" class="btn btn-block button" >Registrarse</button>
