--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -98,8 +98,6 @@
 			ul,li {padding:0; margin:0; border:0; list-style:none outside none; text-align:center;}
 			li[data-phase="6"] {float:left;}
 			
-			
-			
 			.phase .group .game {background: url(@routes.Assets.at("images/logoFondo.png")) left repeat-x;}
 			.phase .group .game:nth-child(2n+1) {background-color:#e2e2e3}
 			.phase .group .game:nth-child(2n) {background-color:#eaeaee}
@@ -143,7 +141,7 @@
 				width: 200px;
 				border: 1px solid;
 				background: #dcdcdd url(@routes.Assets.at("images/FB.png")) no-repeat 1% center; 
-				background-size: 30px 30px; color:#999999; 
+				background-size: 30px 28px; color:#999999; 
 				font-weight: bold;	
 			}
 			
@@ -298,12 +296,12 @@
 					if (winners.length <= 1) {
 						
 						if (winners.length == 0) {
-							console.log('1 Dos o más equipos siguen empatados en la primera posicion -> ' + (_group.name+1));
+							//console.log('1 Dos o más equipos siguen empatados en la primera posicion -> ' + (_group.name+1));
 							$('[data-index="'+(_group.name+1)+'"]').html(_group.name+1);
 							$('[data-index="'+(_group.name+2)+'"]').html(_group.name+2);
 							$.fUpdateBrackets(2,_group.name,true);
 						} else if (winners.length == 1) {
-							console.log('1 Dos o más equipos siguen empatados en la segunda posicion -> ' + (_group.name+2));
+							//console.log('1 Dos o más equipos siguen empatados en la segunda posicion -> ' + (_group.name+2));
 							$('[data-index="'+(_group.name+2)+'"]').html(_group.name+2);																					
 							$.fUpdateBrackets(2,_group.name,true);
 						}
@@ -384,20 +382,20 @@
 						}
 						
 						if (winners.length == 0) {
-							console.log('2 Dos o más equipos siguen empatados en la primera posicion -> ' + (_group.name+1));							
+							//console.log('2 Dos o más equipos siguen empatados en la primera posicion -> ' + (_group.name+1));							
 							$('[data-index="'+(_group.name+1)+'"]').html(_group.name+1);
 							$('[data-index="'+(_group.name+2)+'"]').html(_group.name+2);
 							$.fUpdateBrackets(2,_group.name,true);
 						} else if (winners.length == 1) {
-							console.log('2 Dos o más equipos siguen empatados en la segunda posicion -> ' + (_group.name+2));
+							//console.log('2 Dos o más equipos siguen empatados en la segunda posicion -> ' + (_group.name+2));
 							$('[data-index="'+(_group.name+2)+'"]').html(_group.name+2);														
 							$.fUpdateBrackets(2,_group.name,true);
 						} else {
-							console.log('2 se resolvio');
+							//console.log('2 se resolvio');
 						}
 
 					} else {
-						console.log('1 Tenesmo primero y segundo lugar definido');
+						//console.log('1 Tenesmo primero y segundo lugar definido');
 					}
 
 
@@ -1127,9 +1125,9 @@
 			};
 			
 			var logout_event = function(response) {
-			  console.log("logout_event");
-			  console.log(response.status);
-			  console.log(response);
+			  //console.log("logout_event");
+			  //console.log(response.status);
+			  //console.log(response);
 			};
 	  		
 	  		
@@ -1145,9 +1143,11 @@
 				FB.getLoginStatus(function(response) {
 				  if (response.status === 'connected') {
 
-						FB.api('/me', function(response) {
-					      	document.getElementById("socialid").value = response.id ;			      	
-					      	document.forms[0].submit();
+						FB.api('/me', function(response) {							
+					      	document.getElementById("socialid").value = response.id ;					      	
+					      	document.getElementById("socialname").value = response.name;					      	
+					      	document.getElementById("socialemail").value = response.email;
+				      		document.forms[0].submit();
 					    });
 
 				  } else if (response.status === 'not_authorized') {
@@ -1234,10 +1234,6 @@
 									
 		</div>
 		
-		
-		
-		
-    	
-		
+
     </body>
 </html>
