--- a/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
@@ -48,7 +48,9 @@
 	            )
 	     
 	
-				<input id="socialid" type="hidden" name="socialid" value='' >
+				<input id="socialname" type="hidden" name="socialname" value='' >
+		        <input id="socialemail" type="hidden" name="socialemail" value='' >	    	
+				<input id="socialid" type="hidden" name="socialid" value='' >		
 				
 				<br />
 				<button type="submit" class="btn btn-block button" >Ingresar</button>	
