--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -11,13 +11,13 @@
 					@if(p == 6) { 
 						
 						<div class="row">	
-							<div class="col-md-6 left">
+							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 left">
 								<div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" style="margin: 0 auto;" >-</div>
-								<div class="llave"></div>																	
+								<!--div class="llave"></div-->																	
 							</div>
-							<div class="col-md-6 right">
+							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 right">
 								<div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" style="margin: 0 auto;">-</div>
-								<div class="llave"></div>	
+								<!--div class="llave"></div-->	
 							</div>        
 						</div>
 						
@@ -39,22 +39,22 @@
 								@if(p == 3) {								 
 								 	<li >
 								 		<div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" >-</div>
-								 		<div class="llave"></div>
+								 		<!--div class="llave"></div-->
 								 	</li>
 									<li >
 										<div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" >-</div>
-										<div class="llave"></div>
+										<!--div class="llave"></div-->
 									</li>
 								}
 								
 							 	@if(p == 4) {								 	
 								 	<li>
 								 		<div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" >-</div>
-								 		<div class="llave"></div>
+								 		<!--div class="llave"></div-->
 									</li>								 		
 									<li>
 										<div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" >-</div>
-										<div class="llave"></div>
+										<!--div class="llave"></div-->
 									</li>
 								}
 
@@ -82,13 +82,13 @@
 		<div class="row" style="background-color:#eaeaea; padding: 10px; " >
 			<div class="col-md-8" style="background: url(@routes.Assets.at("images/usuario.png")) no-repeat 16px top;  background-size:88px 88px; height: 88px;  padding-top:9px;" >
 				<img src="@routes.Assets.at("images/ud.png")" style="width:30px; height:68px; vertical-align: middle;" />
-				<h3 id="nick" style="display: inline; margin-left: 60px; font-weight: bold; font-size: 1.4em;">@session.get("nick")</h3>							
+				<h3 id="nick" style="display: inline; margin-left: 60px; font-weight: bold; font-size: 1.2em;">@session.get("nick")</h3>							
 			</div>
 		</div>
 
-		<div class="row menu large" style="margin:5px 0;">
+		<div class="row menu large" style="margin-top:5px; margin-bottom: 5px; padding: 0;">
 		
-			<div data-type="large" class="col-xs-12 col-sm-12 col-md-8 col-lg-8" >				
+			<div data-type="large" class="col-xs-12 col-sm-8 col-md-8 col-lg-8" style=" padding: 0;">				
 				<div class="btn-group">
 					@for(phase <- phases) {			
 						@if(phase.getIdPhase() != 5) {
@@ -97,9 +97,9 @@
 					}
 				</div>					
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" style="text-align: right;" >
+			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" style="text-align: right; padding: 0;" >
 				<div class="btn-group">
-					  <button  data-loading-text="Loading..."  type="button" class="btn btn-default menu phase save" >GUARDAR</button>
+					  <button   data-loading-text="Loading..."  type="button" class="btn btn-default menu phase save" >GUARDAR</button>
 					  <button type="button" class="btn btn-default menu phase exit" onclick="fReplace();">SALIR</button>
 				</div>						
 			</div>
@@ -138,12 +138,12 @@
 
 						<div class="row title">
 					
-							<div class="@{if(phase.getIdPhase() == 1 ) "col-md-6" else "col-md-12"}">								
+							<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">								
 								<span>Predicción @phase.getName()</span>					
 							</div>
 							
 							@if(phase.getIdPhase() == 1) {
-								<div class="col-md-6" style="text-align: right;">
+								<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" style="text-align: right;">
 									<span>Grupos </span>
 									@if(phase.getIdPhase() == 1) {
 										@for(group <- phase.getMatchGroup()) {
@@ -193,18 +193,18 @@
 									
 										
 										
-										<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+										<div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
 											
 											<div class="row">
 												<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 venue" >
 													<div class="row" >
-														<div class="col-xs-4 col-sm-4 col-md-12 col-lg-12 date" >
+														<div class="col-xs-4 col-sm-12 col-md-12 col-lg-12 date" >
 															<span style="color:#173069; ">@game.getDate().toString().substring(6, 8)/@game.getDate().toString().substring(4, 6)</span>
 														</div>
-														<div class="col-xs-4 col-sm-4 col-md-12 col-lg-12 date" >
+														<div class="col-xs-4 col-sm-12 col-md-12 col-lg-12 date" >
 															<span style="color:#b8b7b7; ">@game.getDate().toString().substring(8, 10):@game.getDate().toString().substring(11, 13)</span>
 														</div>
-														<div class="col-xs-4 col-sm-4 col-md-12 col-lg-12 date" >
+														<div class="col-xs-4 col-sm-12 col-md-12 col-lg-12 date" >
 															<span style="color:#b8b7b7; ">@game.getVenue().getName()</span>
 														</div>
 													</div>								
@@ -212,7 +212,8 @@
 											</div>
 																		
 										</div>
-										<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10" >
+
+										<div class="col-xs-12 col-sm-10 col-md-10 col-lg-10" style="float: right" >
 
 											<div class="row">
 										
@@ -319,28 +320,26 @@
 					</div>
 				</div>
 				
-				<div class="row prediction" >					
+				<div class="row prediction" >			
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding:5px; background-color:#e2e2e3; overflow: hidden">		
 					@for((group,index) <- phase.getMatchGroup().zipWithIndex) {
 						
-						@if((index%4) == 0) {
-							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#e2e2e3;">
-								<div class="row" style=" padding: 5px;">
-						}
-
-						<div class="col-xs-4 col-sm-4 col-md-3 col-lg-3"  >
-							<div style="padding: 0px; margin-left:10px;">							
-								<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score">@group.getName()1</div>	
-								<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score">@group.getName()2</div>	
-							</div>
-							<div style="position: absolute; top: 10px; left:0px; width:39px; height: 122px;  background: url(@routes.Assets.at("images/arrows/" + group.getName() + ".png")) no-repeat left center;"></div>
-						</div>
-												
-						@if((index%4) == 3) {
-								</div>
-							</div>
-						}
 						
-					}					
+
+						
+							
+							<div class="position" style="background: url(@routes.Assets.at("images/arrows/" + group.getName() + ".png")) no-repeat left center; background-size: 20px 80px;">							
+								
+									<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score" style="display: block; margin: 0 auto;">@group.getName()1</div>	
+									<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score" style="display: block; margin: 0 auto;">@group.getName()2</div>
+							
+								
+									
+							</div>
+							
+						
+					}
+					</div>					
 				</div>		
 				
 			}	
@@ -349,37 +348,37 @@
 
 
 	<div id="brackets" class="row">
-		<div class="col-md-4">			
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">			
 			<div class="row left">
 				
-				<div class="col-md-4 round-16" >
-					<h4 style="text-align:center; color:#FFFFFF;" >Octavos</h4>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 round-16" >
+					<h4>Octavos</h4>
 					@getGamePhase(2,4,0,1) 		
 				</div>
 
-				<div class="col-md-4 quarter-finals">
-					<h4 style="text-align:center; color:#FFFFFF" >Cuartos</h4>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 quarter-finals">
+					<h4>Cuartos</h4>
 					@getGamePhase(3,4,0,1)
 				</div>
 				
 				
-				<div class="col-md-4 semi-finals">
-					<h4 style="text-align:center; color:#FFFFFF" >Semifinal</h4>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 semi-finals">
+					<h4>Semifinal</h4>
 					@getGamePhase(4,2,0,0)									
 				</div>
 				
 			</div>
 		</div>
 		
-		<div class="col-md-4">
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 						
 			<div class="row" >				
 				<div class="col-md-12 final">
-					<h3 style="text-align:center; color:#FFFFFF;" >Campeón</h3>					
+					<h3>Campeón</h3>					
 					<ul>
 						<li>
-							<div class="content-flag-score" data-alt="GANADOR!" data-index="WIN" style="margin: 0 auto;" >GANADOR!</div>
-							<div class="llave"></div>
+							<div class="content-flag-score" data-alt="-" data-index="WIN" style="margin: 0 auto;" >-</div>
+							<!--div class="llave"></div-->
 						</li>
 					</ul>					
 				</div>							
@@ -392,23 +391,23 @@
 			</div>
 						
 		</div>
-		<div class="col-md-4">
+		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 					
 					
 			<div class="row right">
 
-				<div class="col-md-4 semi-finals"   >
-					<h4 style="text-align:center; color:#FFFFFF" >Semifinal</h4>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 semi-finals"   >
+					<h4>Semifinal</h4>
 					@getGamePhase(4,2,1,1)
 				</div>
 				
-				<div class="col-md-4 quarter-finals"  >
-					<h4 style="text-align:center; color:#FFFFFF" >Cuartos</h4>					
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 quarter-finals"  >
+					<h4>Cuartos</h4>					
 					@getGamePhase(3,4,2,3)
 				</div>
 				
-				<div class="col-md-4 round-16"  >
-					<h4 style="text-align:center; color:#FFFFFF" >Octavos</h4>
+				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 round-16"  >
+					<h4>Octavos</h4>
 					@getGamePhase(2,4,2,3) 	
 				</div>
 				
