--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -31,29 +31,30 @@
 			* { -webkit-border-radius: 0 !important; -moz-border-radius: 0 !important; border-radius: 0 !important;}
 
 
-			
-
 			.bar {background: #FFFFFF url(@routes.Assets.at("images/separadorLogIn.png")) right top repeat-y; margin-top:5px; }
 
 
 			.help-block {display:none !important; }
 			img.flag {width:67px; height:45px; vertical-align: middle;}
+			.content-flag-score img.flag {width:100%; height:auto; vertical-align: middle;}
 			img.arrow{width:11px; height:8px;  cursor: pointer; }
 			
-			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; height: 670px; }
+			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; padding: 5px; }
 			
 			#brackets .left .content-flag-score { margin: 0 auto;}
 			#brackets .right .content-flag-score { margin: 0 auto;}
 			
 			#brackets .round-16 {margin-top: 0px; }
-			#brackets .quarter-finals {margin-top: 43px; overflow: visible; height:auto;   }
-			#brackets .semi-finals  {margin-top: 130px; overflow: visible; height:auto; }			
-			#brackets .final  {margin-top: 115px; margin-bottom: 100px;}
+			#brackets .quarter-finals {margin-top: 30px; overflow: visible; height:auto;   }
+			#brackets .semi-finals  {margin-top: 100px; overflow: visible; height:auto; }			
+			#brackets .final  {margin-top: 50px; margin-bottom: 100px;}
 			
 			#brackets .round-16 li {margin-top: 0px; margin-bottom: 10px;}
-			#brackets .quarter-finals li {position:relative;  margin-top: 0px; margin-bottom: 90px;}
-			#brackets .semi-finals li {position:relative;  margin-top: 0px; margin-bottom: 247px;}			
-
+			#brackets .round-16 ul:last-child  li:last-child {margin-bottom: 0px;}	
+			#brackets .quarter-finals li {position:relative;  margin-top: 0px; margin-bottom: 75px;}
+			#brackets .quarter-finals ul:last-child  li:last-child {margin-bottom: 0px;}	
+			#brackets .semi-finals li {position:relative;  margin-top: 0px; margin-bottom: 205px;}			
+			#brackets .semi-finals ul:last-child  li:last-child {margin-bottom: 0px;}		
 
 			#brackets .left .quarter-finals li .llave { overflow:visible; position:absolute;  bottom:-15px; left:-25px; width:50px; height:91px;  background: url(@routes.Assets.at("images/brackets/right/small.png")) no-repeat left center; }
 			#brackets .left .semi-finals li .llave { overflow:visible; position:absolute;  bottom:-40px; left:-30px; width:70px; height:151px;  background: url(@routes.Assets.at("images/brackets/right/medium.png")) no-repeat left center; }
@@ -66,6 +67,10 @@
 			
 			#brackets .final li .llave{overflow:visible; position:absolute;  bottom:-70px; left:96px; width:204px; height:46px;  background: url(@routes.Assets.at("images/brackets/win.png")) no-repeat center top; }
 			
+			#brackets h4, h3 {text-align:center; color:#FFFFFF}
+			
+			#brackets h4 {font-size: 1em}
+			#brackets h3 {font-size: 1.2em}
 			
 			.menu, .calcular{cursor:pointer; }
 			.menu.group:hover{color:#ffe85c}
@@ -84,14 +89,30 @@
 			
 			.btn.btn-default.menu.phase.exit {background-color:#d9534f; color:#FFFFFF;}
 			.btn.btn-default.menu.phase.exit:hover {padding:10px; background-color:#BEC5DF;  color:#FFFFFF;}
-			
-			.btn.btn-default.menu.phase.save {background-color:#f1e916; color:#999999;}
+			button {font-size: 0.8em !important}
+			.btn.btn-default.menu.phase.save {background-color:#f1e916; color:#999999;  }
 			.btn.btn-default.menu.phase.save:hover{padding:10px; background-color:#BEC5DF; color:#ffffff;}
 
 			.content-flag-score {width: 75px; height: 68px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
 			.content-flag-score:last-child{margin:5px 0 5px 0;}			
 			.content-flag-score.on {background-color:#bababb;  -moz-box-shadow: 3px 3px rgba(226,226,229,0.7); -webkit-box-shadow: 3px 3px rgba(226,226,229,0.7); box-shadow: 3px 3px rgba(226,226,229,0.7); text-align: center;}			
 			.content-flag-score.on img.flag {width:75%;}
+			
+			
+			
+			
+			.content-flag-score {width: 60px; height: 55px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
+			
+			
+			
+			
+			.position { float:left; padding-left: 20px;  width:10%; margin-right:20px;}
+			.position:last-child {margin-right:0px; }
+			
+			
+			
+			
+			
 			
 			.goal {text-align:center;}
 			
@@ -105,8 +126,8 @@
 			.phase:not([data-phase="1"]) .group:nth-child(2n+1) .game {background-color:#eaeaee}
 			.phase:not([data-phase="1"]) .group:nth-child(2n) .game{background-color:#e2e2e3}
 			
-			.date {font-size:x-small;}
-			.name {font-weight:bold;}
+			.date {font-size: 0.8em;}
+			.name {font-weight:bold; font-size:0.9em;}
 			
 			.btn-group > button.menu.phase {margin-left:2px;} 
 			.btn-group > button.menu.phase:first-child {margin-left:0;}
@@ -121,28 +142,32 @@
 
 			.form-control.input {
 				border:0;
-				width: 323px;
+				width: 100%;
   				background: #EAEDF2 url(@routes.Assets.at("images/campoLogIN.png")) no-repeat left;
-				background-size: cover;		   				
+				background-size: cover;	
+				font-size: 1em;	   				
 			}
 			
 			
 			.btn.button {
-				width: 200px;
+				width: 170px;
+				height: 35px;
 				background: #485c89 url(@routes.Assets.at("images/registrate.png")) no-repeat left; 
 				background-size: 150px 32px; 
 				color:#ffffff; font-weight: bold;
-				margin: 5px 0;
+			
 				
 			}
 			
 
 			.btn.facebook {
-				width: 200px;
+				width: 170px;
+				height: 35px;
 				border: 1px solid;
-				background: #dcdcdd url(@routes.Assets.at("images/FB.png")) no-repeat 1% center; 
-				background-size: 30px 28px; color:#999999; 
-				font-weight: bold;	
+				background: #dcdcdd url(@routes.Assets.at("images/FB.png")) no-repeat 5% center; 
+				background-size: 25px auto; color:#999999; 
+				font-weight: bold;
+				margin-bottom: 5px;	
 			}
 			
 	
@@ -1202,7 +1227,13 @@
 			var arrDataTeam	= [];
 		</script>
 	
-		<div class="container">
+	
+
+		
+		
+		
+
+		<div class="container" style="max-width: 800px;" >
 
 
 			@content	
