Seactualiza el tamaño de la vista brackets

--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -39,7 +39,7 @@
 			.content-flag-score img.flag {width:100%; height:auto; vertical-align: middle;}
 			img.arrow{width:11px; height:8px;  cursor: pointer; }
 			
-			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; padding: 5px; }
+			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; margin-bottom:10px; padding: 5px; height:570px; }
 			
 			#brackets .left .content-flag-score { margin: 0 auto;}
 			#brackets .right .content-flag-score { margin: 0 auto;}
