Actualizaciones varias asociadas a la vistas

--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -142,10 +142,10 @@
 
 			.form-control.input {
 				border:0;
-				width: 100%;
+				max-width: 250px;
   				background: #EAEDF2 url(@routes.Assets.at("images/campoLogIN.png")) no-repeat left;
 				background-size: cover;	
-				font-size: 1em;	   				
+				font-size: 1em;	 				
 			}
 			
 			
