--- a/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/signInForm.scala.html
@@ -27,7 +27,7 @@
 			</div>			
     	} 
 
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 bar" >
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bar" >
 			 @helper.form(action = routes.SignIn.submit, 'role -> "form" ) {
 
 				@inputText(
@@ -55,12 +55,12 @@
 				
 				<br />
 				<button type="submit" class="btn btn-block button" >Ingresar</button>	
-				<a href="@routes.ResetPassword.blank">¿Olvidaste tu contraseña?</a>
+				<!--a href="@routes.ResetPassword.blank">¿Olvidaste tu contraseña?</a-->
 				
 			</div>		 
 		}
 		
-		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" >
+		<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" >
 			<br />
 			<p>También puedes ingresar o registrarte a través de:</p>					 
 			<button type="button" class="btn btn-block facebook" onclick="fejemplo();">Facebook</button>
