--- a/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
+++ b/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
@@ -8,18 +8,19 @@
 	.row.menu.small, .row.menu.session {display: block}
 	.row.menu.large {display: none}
 	.prediction {display: none}
+	.col-xs-12.bar {background:none;}
 }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 	
-	#brackets {display:none;} 
+	#brackets {display:block;}	
 	.name {display:inline;}
-	.date {text-align: center;}
-	.venue {background-color: #FFFFFF; height: auto; padding: 5px;}
-	.game {height:auto; padding:5px}
-	.row.menu.small, .row.menu.session {display: block}
-	.row.menu.large {display: none}
-	.prediction {display: none}
+	.date {text-align: left;}
+	.venue { background-color: #FFFFFF; height: 57px; padding: 5px;}
+	.game {height:70px; padding:5px}
+	.row.menu.small, .row.menu.session {display: none}
+	.row.menu.large {display: block}
+	.prediction {display: block}	
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -44,5 +45,6 @@
 	.row.menu.small, .row.menu.session {display: none}
 	.row.menu.large {display: block}
 	.prediction {display: block}	
+	
 }
 
