Se actualiza la barra

--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -79,12 +79,17 @@
 
 @main("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
-		<div class="row" style="background-color:#eaeaea; padding: 10px; " >
+		<div class="row title" style="background-color: #68BA4B;">		
+			<div class="col-md-12">
+				<span class="large">¡Bienvenido  @session.get("nick")!</span>	
+			</div>	
+		</div>
+		<!--div class="row" style="background-color:#eaeaea; padding: 10px; " >
 			<div class="col-md-8" style="background: url(@routes.Assets.at("images/usuario.png")) no-repeat 16px top;  background-size:88px 88px; height: 88px;  padding-top:9px;" >
 				<img src="@routes.Assets.at("images/ud.png")" style="width:30px; height:68px; vertical-align: middle;" />
 				<h3 id="nick" style="display: inline; margin-left: 60px; font-weight: bold; font-size: 1.2em; color:#000000;">@session.get("nick")</h3>							
 			</div>
-		</div>
+		</div-->
 
 		<div class="row menu large" style="margin-top:5px; margin-bottom: 5px; padding: 0;">
 		
