--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -98,6 +98,7 @@
 					@for(phase <- phases) {			
 						@if(phase.getIdPhase() != 5) {
 							<button data-phase="@phase.getIdPhase()"  type="button"  class="btn btn-default menu phase large @("on".when(phase.getIdPhase() == 1)) @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</button>			
+							<!--button data-phase="@phase.getIdPhase()"  type="button"  class="btn btn-default menu phase large @("on".when(phase.getIdPhase() == 1))" >@phase.getName()</button-->
 						}			
 					}
 				</div>					
@@ -166,7 +167,7 @@
 									@if(phase.getIdPhase() == 1) {
 										<div class="btn-group">
 											@for(group <- phase.getMatchGroup()) {		
-												<button data-group="@group.getIdGroup()" class="menu group" >@group.getName()</button>			
+												<button data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1))" >@group.getName()</button>			
 											}
 										</div>
 									}
@@ -245,7 +246,13 @@
 										
 												<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" style="text-align: left; padding: 5px; " data-team="@game.getTeamA().getIdTeam()"   >
 													<img class="flag" onerror="this.style.display='none'" src="@routes.Assets.at("images/flags/" + game.getTeamA().getFlagFile())" alt="@game.getTeamA().getName()" />
-													<span class="name">@game.getTeamA().getName()</span>
+													
+													
+													@if(game.getTeamA().getName() == "Bosnia y Herzegovina") {
+														<span class="name">Bosnia y Hna.</span>	
+													} else {
+														<span class="name">@game.getTeamA().getName()</span>
+													}
 												</div>
 														
 												<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 score" >
@@ -292,7 +299,13 @@
 												</div>										
 															
 												<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" style="text-align: right; padding: 5px; " data-team="@game.getTeamB().getIdTeam()" >
-													<span class="name">@game.getTeamB().getName()</span>																									
+													@if(game.getTeamB().getName() == "Bosnia y Herzegovina") {
+														<span class="name">Bosnia y Hna.</span>	
+													} else {
+														<span class="name">@game.getTeamB().getName()</span>
+													}
+													
+																																						
 													<img  class="flag" onerror="this.style.display='none'" src="@routes.Assets.at("images/flags/" + game.getTeamB().getFlagFile())" alt="@game.getTeamB().getName()"   style="text-align: left;" />																																
 												</div>
 											
