Se actualiza el redirect

--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -47,6 +47,9 @@
 			.content-flag-score img.flag {width:100%; height:auto; vertical-align: middle;}
 			img.arrow{width:11px; height:8px;  cursor: pointer; }
 			
+			body{padding: 0 !important;}
+			.container {padding: 0 !important;}
+			
 			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; margin-bottom:10px; padding: 5px; height:570px; }
 			
 			#brackets .left .content-flag-score { margin: 0 auto;}
@@ -1416,7 +1419,7 @@
 		
 		
 
-		<div class="container" style="max-width: 800px;" >
+		<div class="container" style="max-width: 940px;" >
 
 
 			@content	
