--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -48,7 +48,7 @@
 			img.arrow{width:11px; height:8px;  cursor: pointer; }
 			
 			body{padding: 0 !important;}
-			.container {padding: 0 !important;}
+			/*.container {padding: 0 !important;}*/
 			
 			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; margin-bottom:10px; padding: 5px; height:570px; }
 			
